Change to fit on whole dataset instead of fit_generator, use MSE as loss function

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,18 @@ Backup/MAE_0.0737_71ep_dense64/model_071.hdf5
 __pycache__/data_generator.cpython-36.pyc
 models/AFNN_128/log.csv
 Backup/MAE_0.0635_360ep_dense128/log.csv
+models/AFNN_128/model_020.hdf5
+Backup/MAE_0.101_20ep_deep_dense64/log.csv
+Backup/MAE_0.101_20ep_deep_dense64/model_020.hdf5
+Backup/MSE_165_20rep_deep_dense64/log.csv
+Backup/MSE_165_20rep_deep_dense64/model_010.hdf5
+Backup/MSE_165_20rep_deep_dense64/model_020.hdf5
+models/AFNN_128/model_040.hdf5
+models/AFNN_128/model_060.hdf5
+models/AFNN_128/model_080.hdf5
+models/AFNN_128/model_100.hdf5
+models/AFNN_128/model_120.hdf5
+models/AFNN_128/model_140.hdf5
+models/AFNN_128/model_160.hdf5
+models/AFNN_128/model_180.hdf5
+models/AFNN_128/model_200.hdf5
