Delete maxpooling, and reduced filter numbers to 4

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,38 @@ models/AFNN_128/model_140.hdf5
 models/AFNN_128/model_160.hdf5
 models/AFNN_128/model_180.hdf5
 models/AFNN_128/model_200.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_160.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/log.csv
+Backup/Res_dense128_MSE_166_200rep_fit/model_020.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_040.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_060.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_080.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_100.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_120.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_140.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_160.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_180.hdf5
+Backup/Res_dense128_MSE_166_200rep_fit/model_200.hdf5
+Backup/deep2_4filters_dense64_MSE_396_40ep_fit/log.csv
+Backup/deep2_4filters_dense64_MSE_396_40ep_fit/model_020.hdf5
+Backup/deep2_4filters_dense64_MSE_396_40ep_fit/model_040.hdf5
+Backup/deep3_dense128_MSE_486_40ep_fit/log.csv
+Backup/deep3_dense128_MSE_486_40ep_fit/model_020.hdf5
+Backup/deep3_dense128_MSE_486_40ep_fit/model_040.hdf5
+Backup/deep3_dense64_MSE_450_20ep_fit/log.csv
+Backup/deep3_dense64_MSE_450_20ep_fit/model_020.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/log.csv
+Backup/deep4_dense128_MSE_200_200ep_fit/model_020.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_040.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_060.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_080.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_100.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_120.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_140.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_180.hdf5
+Backup/deep4_dense128_MSE_200_200ep_fit/model_200.hdf5
+Backup/deep_dense64_MAE_0.101_20ep_fitgen/log.csv
+Backup/deep_dense64_MAE_0.101_20ep_fitgen/model_020.hdf5
+Backup/deep_dense64_MSE_165_20ep_fitgen/log.csv
+Backup/deep_dense64_MSE_165_20ep_fitgen/model_010.hdf5
+Backup/deep_dense64_MSE_165_20ep_fitgen/model_020.hdf5
