Trained a 5 Conv layers with 2 dense layers CNN converged on 7 image stacks with both SM and MM light source

--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,113 @@ Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95/logs/events.out.tfevent
 Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95/logs/events.out.tfevents.1539598670.DESKTOP-MINGYAN
 Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95/logs/events.out.tfevents.1539599158.DESKTOP-MINGYAN
 logs/events.out.tfevents.1539601091.DESKTOP-MINGYAN
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539597103.DESKTOP-MINGYAN
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/log.csv
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_020.hdf5
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_040.hdf5
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_060.hdf5
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539598670.DESKTOP-MINGYAN
+Backup/deep4_4filters_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539599158.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539602787.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539607241.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_120.hdf5
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/log.csv
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_020.hdf5
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_040.hdf5
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/model_060.hdf5
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539597103.DESKTOP-MINGYAN
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539598670.DESKTOP-MINGYAN
+Backup/deep4_4filters_Conv1024_MLP_CE_60ep_SM+MM_Loss0.18_Acc0.95_Overfitting/logs/events.out.tfevents.1539599158.DESKTOP-MINGYAN
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/log.csv
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_020.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_040.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_060.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_080.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_100.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/model_120.hdf5
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/logs/events.out.tfevents.1539602787.DESKTOP-MINGYAN
+Backup/deep4_4filters_Conv256_MLP_CE_120ep_SM+MM_Loss0.25_Acc0.90/logs/events.out.tfevents.1539607241.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/log.csv
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/model_020.hdf5
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/model_040.hdf5
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/model_060.hdf5
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/logs/events.out.tfevents.1539619128.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/logs/events.out.tfevents.1539619915.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x3_5x2_MLP_CE_60ep_SM+MM_Loss0.19_Acc0.94/logs/events.out.tfevents.1539625010.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/log.csv
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_020.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_040.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_060.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_080.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_100.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/model_120.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_120ep_SM+MM_Loss0.29_Acc0.89/logs/events.out.tfevents.1539627611.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/log.csv
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_020.hdf5
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_040.hdf5
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_060.hdf5
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_080.hdf5
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/model_100.hdf5
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/logs/events.out.tfevents.1539609076.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x5_MLP_CE_120ep_SM+MM_Loss0.32_Acc0.87/logs/events.out.tfevents.1539610577.DESKTOP-MINGYAN
+data/Res128/stack5_50um_core_multi_mode_range_20um_step_100nm.tif
+data/Res128/stack6_single_mode_range_20um_step_100nm_no_dark_frame.tif
+data/Res128/stack7_single_mode_range_20um_step_100nm.tif
+data/Res256/stack1_200um_core_range_20um_step_100nm_exposure_9000us.tif
+data/Res256/stack2_200um_core_range_20um_step_100nm_exposure_9000us.tif
+data/Res256/stack3_200um_core_range_20um_step_100nm_exposure_9000us.tif
+logs/events.out.tfevents.1539640352.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_300.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/log.csv
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_020.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_040.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_060.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_080.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_100.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_120.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_140.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_160.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_180.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_200.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_220.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_240.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_260.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_280.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_320.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_340.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_360.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_380.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_400.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_420.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_440.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_460.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_480.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_500.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_520.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_540.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/model_560.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_MLP_CE_560ep_NewData_Loss0.1_Acc0.94/logs/events.out.tfevents.1539640352.DESKTOP-MINGYAN
+__pycache__/patch_generator.cpython-36.pyc
+data/Res256/stack1_single_mode_20um_step_100nm_no_dark_frame.tif
+data/Res256/stack2_single_mode_20um_step_100nm.tif
+data/Res256/stack3_50um_multi_mode_20um_step_100nm.tif
+data/Res256/stack4_50um_multi_mode_20um_step_100nm_no_dark_frame.tif
+data/Res256/stack5_50um_core_multi_mode_range_20um_step_100nm.tif
+data/Res256/stack6_single_mode_range_20um_step_100nm_no_dark_frame.tif
+data/Res256/stack7_single_mode_range_20um_step_100nm.tif
+data/MMRes256/stack5_50um_multi_mode_range_20um_step_100nm.tif
+data/MMRes128/stack5_50um_core_multi_mode_range_20um_step_100nm.tif
+data/MMRes256/stack4_50um_core_multi_mode_range_20um_step_100nm.tif
+data/MMRes256/stack6_50um_multi_mode_range_20um_step_100nm_no_dark_frame.tif
+data/SMRes128/stack6_single_mode_range_20um_step_100nm_no_dark_frame.tif
+data/SMRes128/stack7_single_mode_range_20um_step_100nm.tif
+data/SMRes256/stack10_single_mode_range_20um_step_100nm_stack_2.tif
+data/SMRes256/stack7_single_mode_range_20um_step_100nm.tif
+data/SMRes256/stack8_single_mode_range_20um_step_100nm_no_dark_frame.tif
+data/SMRes256/stack9_single_mode_range_20um_step_100nm_no_dark_frame_stack_2.tif
+logs/events.out.tfevents.1539700413.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539700815.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539701383.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539702083.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539702131.DESKTOP-MINGYAN
+models/AFNN_256/log.csv
