Trained 6layes CNN with 2 dense layers on 200um large image stacks with 256x256 resolution.

--- a/.gitignore
+++ b/.gitignore
@@ -532,3 +532,17 @@ logs/events.out.tfevents.1539701383.DESKTOP-MINGYAN
 logs/events.out.tfevents.1539702083.DESKTOP-MINGYAN
 logs/events.out.tfevents.1539702131.DESKTOP-MINGYAN
 models/AFNN_256/log.csv
+data/DMRes256/Diffuser_200um_core_range_20um_step_100nm_stack_3.tif
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_Loss0.5_Acc0.79/log.csv
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_Loss0.5_Acc0.79/model_020.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_Loss0.5_Acc0.79/model_040.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_Loss0.5_Acc0.79/model_060.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_Loss0.5_Acc0.79/logs/events.out.tfevents.1539703282.DESKTOP-MINGYAN
+data/DMRes256/Diffuser_200um_core_range_20um_step_100nm_stack_1.tif
+data/DMRes256/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
+data/LMRes256/stack1_200um_core_range_20um_step_100nm_exposure_9000us.tif
+data/LMRes256/stack2_200um_core_range_20um_step_100nm_exposure_9000us.tif
+data/LMRes256/stack3_200um_core_range_20um_step_100nm_exposure_9000us.tif
+data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_1.tif
+data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
+data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_3.tif
