Added dilated CNN model, trained with CE and MSE, not as good as deep CNN model

--- a/.gitignore
+++ b/.gitignore
@@ -546,3 +546,96 @@ data/LMRes256/stack3_200um_core_range_20um_step_100nm_exposure_9000us.tif
 data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_1.tif
 data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
 data/Res256/Diffuser_200um_core_range_20um_step_100nm_stack_3.tif
+data/DMRes128/Diffuser_200um_core_range_20um_step_100nm_stack_1.tif
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/log.csv
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_020.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_040.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_060.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/logs/events.out.tfevents.1539703282.DESKTOP-MINGYAN
+data/DMRes128/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
+data/DMRes128/Diffuser_200um_core_range_20um_step_100nm_stack_3.tif
+data/Res128/Diffuser_200um_core_range_20um_step_100nm_stack_1.tif
+data/Res128/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
+data/Res128/Diffuser_200um_core_range_20um_step_100nm_stack_3.tif
+logs/events.out.tfevents.1539722674.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539887814.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/log.csv
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_020.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_040.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_060.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_080.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_100.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_120.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/model_140.hdf5
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/logs/events.out.tfevents.1539771168.DESKTOP-MINGYAN
+Backup/deep5_4filters_Conv256_3x4_5x1_Regression_MSE_140ep_NewData_Loss73/logs/events.out.tfevents.1539771856.DESKTOP-MINGYAN
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/log.csv
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_020.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_040.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_060.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_080.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_100.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_120.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_140.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_160.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_180.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_200.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_220.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_240.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_260.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_280.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_300.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_320.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_340.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_360.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_380.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/model_400.hdf5
+Backup/deep6_4filters_Conv256_3x5_5x1_MLP_400ep_SM+MMwith200umDiffuser_NotConverging/logs/events.out.tfevents.1539722674.DESKTOP-MINGYAN
+Backup/deep6_8filters_Conv512_3x5_5x1_MLP_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/log.csv
+Backup/deep6_8filters_Conv512_3x5_5x1_MLP_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_020.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_MLP_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_040.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_MLP_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/model_060.hdf5
+Backup/deep6_8filters_Conv512_3x5_5x1_MLP_60ep_200um_NoDiffuser_Loss0.5_Acc0.79/logs/events.out.tfevents.1539703282.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/log.csv
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/model_020.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/model_040.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/model_060.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/logs/events.out.tfevents.1539849076.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/logs/events.out.tfevents.1539849872.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/logs/events.out.tfevents.1539850055.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep/logs/events.out.tfevents.1539869576.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/log.csv
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/model_020.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/model_040.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/model_060.hdf5
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/logs/events.out.tfevents.1539870916.DESKTOP-MINGYAN
+Backup/dilated_4filters_3+3+5+7_MLP_60ep_DM/logs/events.out.tfevents.1539878087.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/log.csv
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_020.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_040.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_060.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_080.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_100.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_120.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/model_140.hdf5
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539777455.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539778046.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539780389.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539780672.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539780733.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539781211.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539781521.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539782045.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539782117.DESKTOP-MINGYAN
+Backup/dilated_4fitlers_3+3+5+7_MLP_140ep/logs/events.out.tfevents.1539797664.DESKTOP-MINGYAN
+data/TestRes128/LM/Diffuser_200um_core_range_20um_step_100nm_stack_2.tif
+data/TestRes128/MM/stack4_50um_multi_mode_20um_step_100nm_no_dark_frame.tif
+data/TestRes128/SM/stack7_single_mode_range_20um_step_100nm.tif
+logs/events.out.tfevents.1539889640.DESKTOP-MINGYAN
+logs/events.out.tfevents.1539889700.DESKTOP-MINGYAN
+results/MM/prediction.csv
+results/MM/test_error.csv
+results/SM/prediction.csv
+results/SM/results_errorlist.txt
+results/SM/test_error.csv
+trained/AFNN_128/model.hdf5
